package server

import (
	orders "github.com/romaxa83/hra/proto"
	"net/http"

	"github.com/gin-gonic/gin"
	"github.com/golang/protobuf/jsonpb"
	_ "google.golang.org/grpc"
)

// RestServer —Ä–µ–∞–ª–∏–∑—É–µ—Ç —Å–µ—Ä–≤–µ—Ä REST –¥–ª—è —Å–µ—Ä–≤–∏—Å–∞ –∑–∞–∫–∞–∑–æ–≤
type RestServer struct {
	server       *http.Server
	orderService orders.OrderServiceServer // –¢–æ—Ç –∂–µ —Å–µ—Ä–≤–∏—Å –∑–∞–∫–∞–∑–æ–≤, —á—Ç–æ –∏ –≤ —Å–µ—Ä–≤–µ—Ä–µ gRPC
	errCh        chan error
}

// –§—É–Ω–∫—Ü–∏—è NewRestServer –æ—Ç–ª–∏—á–Ω–æ –ø–æ–¥—Ö–æ–¥–∏—Ç –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è RestServer
func NewRestServer(orderService orders.OrderServiceServer, port string) RestServer {
	//logger.Infof("Create HTTP-server - [:%s]", port)
	router := gin.Default()

	rs := RestServer{
		server: &http.Server{
			Addr:    ":" + port,
			Handler: router,
		},
		orderService: orderService,
		errCh:        make(chan error),
	}

	// –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –º–∞—Ä—à—Ä—É—Ç–æ–≤
	router.POST("/test", rs.test)
	router.POST("/order", rs.create)
	router.GET("/order/:id", rs.retrieve)
	router.PUT("/order", rs.update)
	router.DELETE("/order", rs.delete)
	router.GET("/order", rs.list)

	return rs
}

// Start –∑–∞–ø—É—Å–∫–∞–µ—Ç —Å–µ—Ä–≤–µ—Ä REST –≤ —Ñ–æ–Ω–æ–≤–æ–º —Ä–µ–∂–∏–º–µ, –æ—Ç–ø—Ä–∞–≤–ª—è—è –æ—à–∏–±–∫—É –≤ –∫–∞–Ω–∞–ª –æ—à–∏–±–æ–∫
func (r RestServer) Start() {
	//logger.Infof("üöÄ Start HTTP-server")
	go func() {
		r.errCh <- r.server.ListenAndServe()
	}()
}

// Stop –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç —Å–µ—Ä–≤–µ—Ä
func (r RestServer) Stop() error {
	return r.server.Close()
}

// Error –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –∫–∞–Ω–∞–ª –æ—à–∏–±–æ–∫ —Å–µ—Ä–≤–µ—Ä–∞
func (r RestServer) Error() chan error {
	return r.errCh
}

// –§—É–Ω–∫—Ü–∏—è-–æ–±—Ä–∞–±–æ—Ç—á–∏–∫ create —Å–æ–∑–¥–∞–µ—Ç –∑–∞–∫–∞–∑ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞ (—Ç–µ–ª–æ JSON)
func (r RestServer) test(c *gin.Context) {
	var req orders.CreateTestRequest

	// –î–µ–º–∞—Ä—à–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
	err := jsonpb.Unmarshal(c.Request.Body, &req)
	if err != nil {
		c.String(http.StatusInternalServerError, "error creating order request")
	}

	// –ò—Å–ø–æ–ª—å–∑—É–µ—Ç —Å–µ—Ä–≤–∏—Å –∑–∞–∫–∞–∑–æ–≤, —á—Ç–æ–±—ã —Å–æ–∑–¥–∞—Ç—å –∑–∞–∫–∞–∑ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
	resp, err := r.orderService.CreateTest(c.Request.Context(), &req)
	if err != nil {
		c.String(http.StatusInternalServerError, "error creating order")
	}
	//logger.Warnf("RESPONSE %+v", resp)
	//logger.Warnf("REQUEST %+v", req)
	m := &jsonpb.Marshaler{}
	if err := m.Marshal(c.Writer, resp); err != nil {
		c.String(http.StatusInternalServerError, "error sending order response")
	}
}

// –§—É–Ω–∫—Ü–∏—è-–æ–±—Ä–∞–±–æ—Ç—á–∏–∫ create —Å–æ–∑–¥–∞–µ—Ç –∑–∞–∫–∞–∑ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞ (—Ç–µ–ª–æ JSON)
func (r RestServer) create(c *gin.Context) {
	var req orders.CreateOrderRequest

	// –î–µ–º–∞—Ä—à–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
	err := jsonpb.Unmarshal(c.Request.Body, &req)
	if err != nil {
		c.String(http.StatusInternalServerError, "error creating order request")
	}

	// –ò—Å–ø–æ–ª—å–∑—É–µ—Ç —Å–µ—Ä–≤–∏—Å –∑–∞–∫–∞–∑–æ–≤, —á—Ç–æ–±—ã —Å–æ–∑–¥–∞—Ç—å –∑–∞–∫–∞–∑ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
	resp, err := r.orderService.Create(c.Request.Context(), &req)
	if err != nil {
		c.String(http.StatusInternalServerError, "error creating order")
	}
	m := &jsonpb.Marshaler{}
	if err := m.Marshal(c.Writer, resp); err != nil {
		c.String(http.StatusInternalServerError, "error sending order response")
	}
}

func (r RestServer) retrieve(c *gin.Context) {
	c.String(http.StatusNotImplemented, "not implemented yet")
}

func (r RestServer) update(c *gin.Context) {
	c.String(http.StatusNotImplemented, "not implemented yet")
}

func (r RestServer) delete(c *gin.Context) {
	c.String(http.StatusNotImplemented, "not implemented yet")
}

func (r RestServer) list(c *gin.Context) {
	c.String(http.StatusNotImplemented, "not implemented yet")
}
